syntax = "proto3";

package hello;

service Hello {
  rpc SayHello (SayHelloRequest) returns (SayHelloReply);
}

message SayHelloRequest {
  string name = 1;
}

message SayHelloReply {
  string message = 1;
}
